[gd_scene format=3 uid="uid://dxtgrotyfr7tg"]

[ext_resource type="Theme" uid="uid://ddwm0nvjciyk4" path="res://assets/global_theme.tres" id="1_theme"]
[ext_resource type="Script" uid="uid://4t2e3egyxyso" path="res://addons/diablo_huma_studio/db_manager/visual_editors/create_data_menu/dbm_create_data_menu.gd" id="2_script"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_sep"]
thickness = 4

[node name="CreateDataMenu" type="Control" unique_id=897959288]
custom_minimum_size = Vector2(1000, 800)
layout_mode = 3
anchors_preset = 0
offset_right = 1000.0
offset_bottom = 800.0
theme = ExtResource("1_theme")
script = ExtResource("2_script")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=854571887]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=2126166142]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer" unique_id=504573454]
layout_mode = 2
text = "Create Data"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=114503982]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxLine_sep")

[node name="DataTypeRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1863468951]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/DataTypeRow" unique_id=1453192146]
layout_mode = 2
text = "Data Type:"

[node name="DataTypeSelector" type="OptionButton" parent="MarginContainer/VBoxContainer/DataTypeRow" unique_id=461829075]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 1
popup/item_0/text = "LevelData"
popup/item_0/id = 0

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=1357648680]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxLine_sep")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer" unique_id=430266646]
layout_mode = 2
size_flags_vertical = 3

[node name="PropertiesContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer" unique_id=1205689402]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=1505909332]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxLine_sep")

[node name="FeedbackLabel" type="Label" parent="MarginContainer/VBoxContainer" unique_id=1651116948]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 40

[node name="ButtonsRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1157039625]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsRow" unique_id=780509362]
layout_mode = 2
text = "Back"

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsRow" unique_id=658282942]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Save Data"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/DataTypeRow/DataTypeSelector" to="." method="_on_data_type_selector_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsRow/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsRow/SaveButton" to="." method="_on_save_button_pressed"]
